@@ -560,19 +560,6 @@ public abstract class Selection implements Cloneable
 			//{{{ Move the caret down a line
 			if(text == null || text.length() == 0)
 				return end;
-			if(lastLine != buffer.getLineCount() - 1
-				&& this.startLine == this.endLine)
-			{
-				int offset = buffer.getOffsetOfVirtualColumn(
-					lastLine + 1,startColumn,null);
-				if(offset == -1)
-				{
-					buffer.insertAtColumn(lastLine + 1,startColumn,"");
-					return buffer.getLineEndOffset(lastLine + 1) - 1;
-				}
-				else
-					return buffer.getLineStartOffset(lastLine + 1) + offset;
-			}
 			else
 				return endOffset;
 			//}}}
